<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name" />

                <EditText
                    android:id="@+id/course_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/week" />

                <Spinner
                    android:id="@+id/week"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:entries="@array/week"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start" />

                <Spinner
                    android:id="@+id/classes_begin"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:entries="@array/time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/end" />

                <Spinner
                    android:id="@+id/classes_ends"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:entries="@array/time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/teacher" />

                <EditText
                    android:id="@+id/teacher_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/classroom" />

                <EditText
                    android:id="@+id/class_room"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/add" />

</LinearLayout>