<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textStyle="italic"
    tools:context=".ui.Calendar.CalendarFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pink" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Toolbar-->

<!--            <androidx.appcompat.widget.Toolbar-->
<!--                android:id="@+id/toolbar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?android:attr/actionBarSize"-->
<!--                android:background="@color/teal_200"-->
<!--                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--                app:popupTheme="@style/AlertDialog.AppCompat.Light"/>-->

            <!--week information-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/teal_200">

                <TextView
                    android:layout_width="110px"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/item_name"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mon"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tue"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wen"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thu"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fri"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sat"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sun"/>
            </LinearLayout>
            <!--            Class Schedule-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--                "Number of Sections" layout on the left-->
                <LinearLayout
                    android:id="@+id/left_view_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
                <!--                course layout-->
                <RelativeLayout
                    android:id="@+id/monday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:id="@+id/tuesday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:id="@+id/wednesday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:id="@+id/thursday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:id="@+id/friday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:id="@+id/saturday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:id="@+id/weekday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</ScrollView>

